# onsides-web

./: .gitignore  README.md  api.py  app.py  app.wsgi  deploy.yml  etl.py  flask-app.service.j2  nginx.conf.j2  pyproject.toml  requirements.txt  serve_pages.py  sql.conf  sql.conf.example
backend/: api.py  app.py  etl.py  pyproject.toml  requirements.txt  serve_pages.py
deploy/: deploy.yml  nginx.conf.j2
etl/: build-database.sh  format.sql  load.sql
frontend/: bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  app.css  index.js
frontend/src/api/: bioontology.js  onsides.js
frontend/src/components/: Footer.js  Header.js  HeaderAndFooter.js  Pagination.js  Search.js  SearchResultsLists.js  Spinner.js  StatsTable.js  adverse_details.jsx  adverse_table.jsx  drug_details.jsx  drug_table.jsx  footer.jsx  layout.jsx  navbar.jsx  search.jsx  theme_switcher.jsx
frontend/src/components/css/: pagination.css  search.css  searchresultslists.css  spinner.css  statstable.css
frontend/src/components/ui/: command.jsx  table.jsx
frontend/src/lib/: config.js
frontend/src/pages/: AdverseReaction.js  AdverseReactionsList.js  Download.js  Drug.js  DrugsList.js  Home.js  PageDoesNotExist.js  SearchResults.js  _app.js  adverse-list.js  drug-list.js  index.js
frontend/src/pages/adverse/: [meddraId].js
frontend/src/pages/css/: adversereaction.css  drug.css  home.css  searchresults.css
frontend/src/pages/drug/: [rxcui].js
frontend/src/styles/: globals.css
logs/: access.logs  app.logs
