[project]
name = "onsides-web"
version = "0.1.0"
description = "Web server for the ONSIDES project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aniso8601==9.0.1",
    "autopep8==1.6.0",
    "click==8.1.3",
    "flask-cors==3.0.10",
    "flask-restful==0.3.9",
    "flask==2.1.2",
    "gunicorn>=23.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.1",
    "pandas>=2.2.3",
    "pycodestyle==2.8.0",
    "pydantic>=2.9.2",
    "python-dotenv==0.20.0",
    "pytz==2022.1",
    "six==1.16.0",
    "sqlmodel>=0.0.22",
    "toml==0.10.2",
    "werkzeug==2.1.2",
]
